--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -6,18 +6,24 @@
     "start": "nodemon --watch ./ --ext ts --exec ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma": {
+    "seed": "node prisma/seed.ts"
+  },
   "author": "Harry Krisna Darmawan",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@fastify/compress": "^8.0.1",
     "@fastify/cors": "^10.0.2",
     "@prisma/client": "^6.2.1",
     "@sinclair/typebox": "^0.34.14",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
-    "fastify": "^5.2.1"
+    "fastify": "^5.2.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "@types/supertest": "^6.0.2",
     "nodemon": "^3.1.9",
