feat: add api login

--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^10.0.2",
     "@prisma/client": "^6.2.1",
     "@sinclair/typebox": "^0.34.14",
