--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -13,11 +13,13 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/themes": "^3.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-redux": "^7.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
