--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/themes": "^3.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
