--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
