--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --watch ./ --ext ts --exec ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch ./ --ext ts --exec ts-node index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild ./index.ts --bundle --outfile=dist/index.js --platform=node",
+    "start": "node dist/index.js"
   },
   "prisma": {
     "seed": "node prisma/seed.ts"
@@ -27,12 +29,12 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "@types/supertest": "^6.0.2",
+    "esbuild": "^0.24.2",
     "nodemon": "^3.1.9",
     "prisma": "^6.2.1",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vitest": "^3.0.4"
-  },
-  "type": "module"
+  }
 }
