--- a/backend-app/tsconfig.json
+++ b/backend-app/tsconfig.json
@@ -8,9 +8,11 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noEmit": true,
+    "rootDir": ".",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": true,
+    "outDir": "./dist"
   },
-  "include": ["../**/*.ts", "prisma/seed.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./**/*.ts", "../shared/**/*.ts", "prisma/seed.ts"],
+  "exclude": ["node_modules", "../frontend-app"]
 }
