--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -3,5 +3,5 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: backend-app/Dockerfile
     image: registry.cloudraya.com/ir-cr-harry-3924/magpie-backend:latest
