--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon --watch ./ --ext ts --exec ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "build": "esbuild ./index.ts --bundle --outfile=dist/index.js --platform=node",
     "start": "node dist/index.js"
   },
