--- a/backend-app/tsconfig.json
+++ b/backend-app/tsconfig.json
@@ -8,7 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noEmit": true,
-    "rootDir": ".",
+    "rootDir": "..",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "outDir": "./dist"
