ci: fix typo on github action

--- a/.github/workflows/docker-build-deploy-backend.yml
+++ b/.github/workflows/docker-build-deploy-backend.yml
@@ -18,7 +18,7 @@ env:
   DOCKER_IMAGE_NAME_BACKEND: magpie-backend
   DOCKER_IMAGE_NAME_FRONTEND: magpie-frontend
   DOKPLOY_APP_ID_BACKEND: ${{ secrets.DOKPLOY_APP_ID_BACKEND }}
-  DOKPLOY_APP_ID_FRONTEND: ${{ secrets.DOKPLOY_APP_ID_BACKEND }}
+  DOKPLOY_APP_ID_FRONTEND: ${{ secrets.DOKPLOY_APP_ID_FRONTEND }}
 
 jobs:
   build:
